# Watchtower

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  go.mod  go.sum  railway.toml  watchtower.example.yaml
docs/: client-sdk.md  configuration.md  deployment.md  railway.md
docs/superpowers/plans/: 2026-06-28-builtin-log-viewer.md
docs/superpowers/specs/: 2026-06-28-builtin-log-viewer-design.md
internal/config/: config.go
internal/pool/: pool.go
proto/: watchtower.pb.go  watchtower.proto  watchtower_grpc.pb.go
proto/google/protobuf/: timestamp.proto
src/: health.rs  lib.rs  main.rs  metrics.rs  spillover.rs
src/client/: mod.rs
src/config/: mod.rs
src/pipeline/: mod.rs
src/server/: mod.rs
src/sink/: elastic.rs  encode.rs  forward.rs  mod.rs  store.rs
src/viewer/: index.html  mod.rs
tests/: integration_test.rs
